--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
 <h1>Welcome on ShoppR</h1>
 <p>Enjoy the use of your own shopping lists</p>
 <p>It works ! I'm happy right now ! </p>
+<router-outlet></router-outlet>
