S2-Add logon component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,7 @@
 <h1>Welcome on ShoppR</h1>
 <p>Enjoy the use of your own shopping lists</p>
 <p>It works ! I'm happy right now ! </p>
+<fieldset>
+  <app-authentication></app-authentication>
+</fieldset>
+
