S2-simple css logon screen

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,10 @@
-<h1>Welcome on ShoppR</h1>
+<fieldset class="header">
+  <p>ShoppR : !MENU BAR! change color pls</p>
+</fieldset>
+<fieldset class="body">
+  <router-outlet></router-outlet>
+</fieldset>
+<fieldset class="footer">
+  thanks to use Shoppr
+</fieldset>
 
-<router-outlet></router-outlet>
