--- a/src/app/authentication/create-account/create-account.component.scss
+++ b/src/app/authentication/create-account/create-account.component.scss
@@ -1,5 +1,11 @@
-.create-account-title {
-  margin-bottom: 2vw;
-  font-size: 4vw;
-  font-weight: bold;
+[class="form-submit"]{
+  float: right;
+  margin: auto;
+  right: 1px;
+}
+[class="form-body"]{
+  margin: auto;
+}
+[class="arobase"]{
+  width: 20px;
 }
