--- a/src/app/authentication/logon/logon.component.html
+++ b/src/app/authentication/logon/logon.component.html
@@ -1,17 +1,23 @@
-<h4>Connect</h4>
-<hr>
+<h3>Connect</h3>
 <form (ngSubmit)="connect()">
-  <h4>Email : </h4>
-  <label>
-    <input name="personalEmail" id="personalEmail"
-           [(ngModel)]="personalEmail"
-           placeholder="personal">
-  </label>
-  <label>@
-    <input name="domainEmail" id="domainEmail"
-           [(ngModel)]="domainEmail"
-           placeholder="domain">
-  </label>
-  <button type="submit" name="connectButton" id="connectButton">connect</button>
+  <div class="form-body">
+    <div class="form-input">
+      <h4>Email : </h4>
+      <label>
+        <input name="personalEmail" id="personalEmail"
+               [(ngModel)]="personalEmail"
+               placeholder="personal">
+      </label>
+      <label> <img class="arobase" src="../../../assets/arobase.png" alt="arobase">
+        <input name="domainEmail" id="domainEmail"
+               [(ngModel)]="domainEmail"
+               placeholder="domain">
+      </label>
+      <hr>
+      <div class="form-submit">
+        <button type="submit" name="connectButton" id="connectButton">connect</button>
+      </div>
+    </div>
+  </div>
 </form>
 
