--- a/src/styles.scss
+++ b/src/styles.scss
@@ -16,8 +16,8 @@ p {
 
 hr {
   alignment: center;
-  width: 50px;
-  border-top: 5px solid #d22571;
+  width: 0;
+  //border-top: 5px solid #d22571;
 }
 
 main {
