--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -2,4 +2,7 @@
   position: sticky;
   top: 0;
   height: 4vw;
+  background: white;
+  padding-bottom: 1vw;
+  border-bottom: 5px ridge #d22571;
 }
