--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,6 @@
 <div class="menu-bar-container">
   <app-menu-bar></app-menu-bar>
 </div>
-
+<div class="content-container">
+  <router-outlet></router-outlet>
+</div>
