--- a/src/app/menu-bar/menu-bar.component.html
+++ b/src/app/menu-bar/menu-bar.component.html
@@ -5,8 +5,8 @@
   </div>
 
   <div class="navigation-bar">
-    <button class="navigation-button">home</button>
-    <button class="navigation-button">myShopprLists</button>
+    <button class="navigation-button" routerLink="">home</button>
+    <button class="navigation-button" routerLink="create-shoppinglist">myShopprLists</button>
     <button class="navigation-button">find recipes</button>
   </div>
 </div>
