--- a/src/app/menu-bar/menu-bar.component.html
+++ b/src/app/menu-bar/menu-bar.component.html
@@ -9,4 +9,8 @@
     <button class="navigation-button" routerLink="create-shoppinglist">myShopprLists</button>
     <button class="navigation-button">find recipes</button>
   </div>
+  <div class="welcome-message">
+    You are logged in as:
+    <span style="color:#d22571;">{{loginStatus}}</span>
+  </div>
 </div>
