--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,3 +4,7 @@
 <div class="content-container">
   <router-outlet></router-outlet>
 </div>
+
+<div class="footer-bar-container">
+<app-footer-bar></app-footer-bar>
+</div>
