--- a/src/app/menu-bar/menu-bar.component.scss
+++ b/src/app/menu-bar/menu-bar.component.scss
@@ -27,4 +27,11 @@
   }
 }
 
+.welcome-message {
+  margin-left: auto;
+  align-self: flex-end;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+font-size: 1.3vw;
+}
+
 
