--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,13 @@
-<div class="menu-bar-container">
-  <app-menu-bar></app-menu-bar>
-</div>
+
+<fieldset class="header">
+  <div class="menu-bar-container">
+    <app-menu-bar></app-menu-bar>
+  </div>
+</fieldset>
+<fieldset class="body">
+  <router-outlet></router-outlet>
+</fieldset>
+<fieldset class="footer">
+  thanks to use Shoppr
+</fieldset>
 
