--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -6,3 +6,13 @@
   padding-bottom: 1vw;
   border-bottom: 5px ridge #d22571;
 }
+fieldset{
+  border-color: transparent;
+}
+[class="header"]{
+}
+[class="body"]{
+}
+[class="footer"]{
+  background-color: #eee;
+}
