DEMO-Add logOut button for demo purpose

--- a/src/app/menu-bar/menu-bar.component.html
+++ b/src/app/menu-bar/menu-bar.component.html
@@ -10,6 +10,7 @@
     <button class="navigation-button">find recipes</button>
   </div>
   <div class="welcome-message">
+    <button class="logout" (click)="logout()">disconnect</button>
     You are logged in as:
     <span style="color:#d22571;">{{loginStatus}}</span>
   </div>
