--- a/src/app/menu-bar/menu-bar.component.scss
+++ b/src/app/menu-bar/menu-bar.component.scss
@@ -32,6 +32,21 @@
   align-self: flex-end;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 font-size: 1.3vw;
+  .logout-button {
+    height: 3vw;
+    width: 10vw;
+    background-color: white;
+    border: 0.3px solid lightgrey;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+    font-size: 1.25vw;
+
+  }
+
+  .logout-button:hover {
+    background-color: #d22571;
+    color: white;
+    border: none;
+  }
 }
 
 
