--- a/src/app/menu-bar/menu-bar.component.scss
+++ b/src/app/menu-bar/menu-bar.component.scss
@@ -31,15 +31,16 @@
   margin-left: auto;
   align-self: flex-end;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-font-size: 1.3vw;
+  font-size: 1.3vw;
+
   .logout-button {
-    height: 3vw;
-    width: 10vw;
+    height: 2vw;
+    width: 6vw;
     background-color: white;
     border: 0.3px solid lightgrey;
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
     font-size: 1.25vw;
-
+    margin-left: 1vw;
   }
 
   .logout-button:hover {
