--- a/src/app/authentication/create-account/create-account.component.html
+++ b/src/app/authentication/create-account/create-account.component.html
@@ -5,7 +5,10 @@
       <div class="form-body">
         <div class="form-input">
           <h4>Email : </h4>
-          <input id="email" formControlName="email"/>
+          <input id="email" formControlName="email" (click)="resetDuplicate()"/>
+          <div *ngIf="duplicate" class="text-danger">
+            {{ duplicate.error.errors }}
+          </div>
           <div *ngIf="submitted && email.invalid && (email.dirty || email.touched)"
                class="text-danger">
             <div *ngIf="email.errors.required">Email address is required.</div>
