s5-fix issues that product user/entries/... was null

--- a/src/app/shoppinglist/shopping-list-detail/shopping-list-detail.component.html
+++ b/src/app/shoppinglist/shopping-list-detail/shopping-list-detail.component.html
@@ -1,4 +1,4 @@
-<div class="create-shoppinglist-container">
+<div class="create-shoppinglist-container"  *ngIf="shoppingList">
   <div class="page-title logo">
     Details for shopping list: <span style="color:#d22571;">{{shoppingList.name}}</span>
   </div>
