--- a/src/app/authentication/create-account/create-account.component.html
+++ b/src/app/authentication/create-account/create-account.component.html
@@ -5,7 +5,11 @@
       <div class="form-body">
         <div class="form-input">
           <h4>Email : </h4>
-          <input id="email" formControlName="email" (click)="resetErrors()"/>
+          <div class="input-container">
+            <label>
+              <input id="email" formControlName="email" (click)="resetErrors()" size=40px/>
+            </label>
+          </div>
           <div *ngIf="duplicate" class="text-danger">
             {{ duplicate.error.errors }}
           </div>
