--- a/src/app/shoppinglist/shopping-list-detail/shopping-list-detail.component.html
+++ b/src/app/shoppinglist/shopping-list-detail/shopping-list-detail.component.html
@@ -1,50 +1,53 @@
-<div class="create-shoppinglist-container"  *ngIf="shoppingList">
-  <div class="page-title logo">
-    Details for shopping list: <span style="color:#d22571;">{{shoppingList.name}}</span>
-  </div>
-
-  <div class="create-shoppinglist-form-container">
-    <div class="products-title"> Products in shopping list: 0
-      <div class="product-list">
-        <table style="width:100%">
-          <tr>
-            <th class="desc">NAME</th>
-            <th class="desc">QUANTITY</th>
-            <th class="desc"></th>
-          </tr>
-          <tr *ngFor="let entry of shoppingList.entries">
-            <th>{{entry.product.name}}</th>
-            <th>{{entry.quantity}}</th>
-            <th></th>
-          </tr>
-        </table>
-      </div>
-      <hr>
-      <button (click)="showAddProduct()">add product</button>
-      <fieldset name="addProduct" [ngStyle]="{'display':displayAddProduct}">
-        <h4> Add product to {{shoppingList.name}}</h4>
-        <hr class="hrline">
-        <form (ngSubmit)="addProduct()">
-          <div class="productInfo">
-            <h4>Product : </h4>
-            <h6> Field with * are required </h6>
-            <label>*Name :
-              <input name="productName" id="productName"
-                     [(ngModel)]="productName"
-                     placeholder="name"/>
-            </label>
-            <label> Quantity :
-              <input name="productQuantity" id="productQuantity"
-                     [(ngModel)]="productQuantity"
-                     placeholder="quantity"/>
-            </label>
-          </div>
-          <hr class="hrline">
-          <button type="submit">add</button>
-        </form>
-      </fieldset>
+<div *ngIf="shoppingList">
+  <div class="create-shoppinglist-container">
+    <div class="page-title logo">
+      Details for shopping list: <span style="color:#d22571;">{{shoppingList.name}}</span>
     </div>
-  </div>
 
+    <div class="create-shoppinglist-form-container">
+      <div class="products-title"> Products in shopping list: {{shoppingList.entries.length}}
+        <div class="product-list">
+          <table style="width:100%">
+            <tr>
+              <th class="desc">NAME</th>
+              <th class="desc">QUANTITY</th>
+              <th class="desc"></th>
+            </tr>
+            <tr *ngFor="let entry of shoppingList.entries">
+              <th>{{entry.product.name}}</th>
+              <th>{{entry.quantity}}</th>
+              <th></th>
+            </tr>
+          </table>
+        </div>
+        <hr>
+        <button (click)="showAddProduct()">add product</button>
+        <fieldset name="addProduct" [ngStyle]="{'display':displayAddProduct}">
+          <h4> Add product to {{shoppingList.name}}</h4>
+          <hr class="hrline">
+          <form (ngSubmit)="addProduct()">
+            <div class="productInfo">
+              <h4>Product : </h4>
+              <h6> Field with * are required </h6>
+              <label>*Name :
+                <input name="productName" id="productName"
+                       [(ngModel)]="productName"
+                       placeholder="name"/>
+              </label>
+              <label> Quantity :
+                <input name="productQuantity" id="productQuantity"
+                       [(ngModel)]="productQuantity"
+                       placeholder="quantity"/>
+              </label>
+            </div>
+            <hr class="hrline">
+            <button type="submit">add</button>
+          </form>
+        </fieldset>
+      </div>
+    </div>
+
+  </div>
 </div>
+
 
