--- a/src/app/shoppinglist/shopping-list-detail/shopping-list-detail.component.html
+++ b/src/app/shoppinglist/shopping-list-detail/shopping-list-detail.component.html
@@ -1,28 +1,31 @@
-<div *ngIf="shoppingList">
+<div *ngIf="shoppingList && displayAddProduct">
   <div class="create-shoppinglist-container">
     <div class="page-title logo">
       Details for shopping list: <span style="color:#d22571;">{{shoppingList.name}}</span>
     </div>
-
     <div class="create-shoppinglist-form-container">
       <div class="products-title"> Products in shopping list: {{shoppingList.entries.length}}
         <div class="product-list">
-          <table style="width:100%">
-            <tr>
-              <th class="desc">NAME</th>
-              <th class="desc">QUANTITY</th>
-              <th class="desc"></th>
-            </tr>
-            <tr *ngFor="let entry of shoppingList.entries">
-              <th>{{entry.product.name}}</th>
-              <th>{{entry.quantity}}</th>
-              <th></th>
-            </tr>
-          </table>
+          <fieldset>
+            <table style="width:100%">
+              <tr>
+                <th class="desc">NAME</th>
+                <th class="desc">QUANTITY</th>
+                <th class="desc"></th>
+              </tr>
+              <tr *ngFor="let entry of shoppingList.entries">
+                <th>{{entry.product.name}}</th>
+                <th>{{entry.quantity}}</th>
+                <th><button>remove</button></th>
+              </tr>
+            </table>
+          </fieldset>
+          <fieldset>
+            <hr>
+            <button (click)="showAddProduct()">add product</button>
+            <app-add-product [ngStyle]="{'display':displayAddProduct}"></app-add-product>
+          </fieldset>
         </div>
-        <hr>
-        <button (click)="showAddProduct()">add product</button>
-        <app-add-product [ngStyle]="display:displayAddProduct"></app-add-product>
       </div>
     </div>
   </div>
