s5-Add product to shopping list working

--- a/src/app/authentication/create-account/create-account.component.html
+++ b/src/app/authentication/create-account/create-account.component.html
@@ -20,7 +20,7 @@
           </div>
           <hr>
           <div class="form-submit">
-            <button type="submit" id="connectButton">create</button>
+            <button type="submit" id="createButton">create</button>
           </div>
         </div>
       </div>
