--- a/src/app/authentication/logon/logon.component.scss
+++ b/src/app/authentication/logon/logon.component.scss
@@ -1,18 +1,17 @@
-[class="form-submit"]{
-  float: right;
+
+
+.form-container{
   margin: auto;
-  right: 1px;
-}
-[class="form-body"]{
-  margin: auto;
-}
-[class="arobase"]{
-  width: 20px;
+
+  .form-submit {
+    float: right;
+    margin: auto;
+    margin-top: 1vw;
+  }
+  .text-danger {
+    color: red;
+    font-size: 1.0vw;
+    height: 1.0vw;
+  }
 }
 
-.text-danger {
-  color: red;
-  font-size: 1.0vw;
-  height: 1.0vw;
-
-}
