s5-Name is now really required

--- a/src/app/authentication/create-account/create-account.component.html
+++ b/src/app/authentication/create-account/create-account.component.html
@@ -7,7 +7,7 @@
           <h4>Email : </h4>
           <div class="input-container">
             <label>
-              <input id="email" formControlName="email" (click)="resetErrors()" size=40px/>
+              <input id="email" formControlName="email" (click)="resetErrors()" size=40px placeholder="aaa@bbb.ccc"/>
             </label>
           </div>
           <div *ngIf="duplicate" class="text-danger">
