--- a/src/app/shoppinglist/add-product/add-product.component.html
+++ b/src/app/shoppinglist/add-product/add-product.component.html
@@ -1,20 +1,22 @@
 <fieldset name="addProduct">
   <h4> Add product</h4>
   <hr class="hrline">
-  <form (ngSubmit)="addProduct()">
+  <form [formGroup]="addProductForm" (ngSubmit)="addProduct()">
     <div class="productInfo">
       <h4>Product : </h4>
       <h6> Field with * are required </h6>
       <label>*Name :
-        <input name="productName" id="productName"
-               [(ngModel)]="productName"
+        <input name="productName" id="productName" formControlName="productName" (click)="resetErrors()"
                placeholder="name"/>
       </label>
       <label> Quantity :
-        <input name="productQuantity" id="productQuantity"
-               [(ngModel)]="productQuantity"
+        <input name="productQuantity" id="productQuantity" formControlName="productQuantity"
                placeholder="quantity"/>
       </label>
+    </div>
+    <div *ngIf="submitted && nameOfProduct.invalid"
+         class="text-danger">
+      <div *ngIf="nameOfProduct.errors.required">Product name is required.</div>
     </div>
     <hr class="hrline">
     <button type="submit">add</button>
