--- a/src/app/authentication/create-account/create-account.component.html
+++ b/src/app/authentication/create-account/create-account.component.html
@@ -3,7 +3,7 @@
   <h4>Email : </h4>
   <div [formGroup]="accountForm" class="account-form">
     <label>
-      <input id="email" formControlName="email" (click)="resetErrors()" size=40px/>
+      <input id="email" formControlName="email" (click)="resetErrors()" size=40px placeholder="aaa@bbb.ccc"/>
     </label>
   </div>
   <div class="text-danger">
