--- a/src/app/authentication/logon/logon.component.html
+++ b/src/app/authentication/logon/logon.component.html
@@ -4,7 +4,7 @@
   <form>
     <div [formGroup]="loginForm" (ngSubmit)="connect()">
       <label>
-        <input id="email" formControlName="email" (click)="resetErrors()" (input)="validateEmailFormat()" size=40px/>
+        <input id="email" formControlName="email" (click)="resetErrors()" (input)="validateEmailFormat()" size=40px placeholder="aaa@bbb.ccc"/>
       </label>
     </div>
     <div class="text-danger">
