--- a/src/styles.scss
+++ b/src/styles.scss
@@ -80,7 +80,6 @@ html, body {
   border-top: black solid thick;
   background-color: rgba(255, 255, 255, 0.5);
 }
-
 .btn-primary {
   background-color: #d22571;
   border-color: #d22571;
@@ -93,6 +92,28 @@ html, body {
 .btn-primary:active, .btn-primary:visited, .btn-primary:focus, .btn-primary:active:focus {
   background-color: #2e2e2e;
 }
+
+button{
+  height: 3vw;
+  width: 10vw;
+  background-color: white;
+  border: 0.3px solid lightgrey;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  font-size: 1.25vw;
+}
+
+button:hover{
+  background-color: #d22571;
+  color: white;
+  border: none;
+}
+
+button:active, button:visited, button:focus, button:active:focus{
+  background-color: #d22571;
+  color: white;
+  border: none;
+}
+
 .logo {
   font-size: 3vw;
   font-weight: bold;
@@ -108,5 +129,4 @@ body {
   margin-left: 2vw;
   color: red;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-
 }
