--- a/src/app/authentication/logon/logon.component.scss
+++ b/src/app/authentication/logon/logon.component.scss
@@ -5,8 +5,7 @@
 
   .form-submit {
     float: right;
-    margin: auto;
-    margin-top: 1vw;
+    margin: 1vw auto auto;
   }
   .text-danger {
     color: red;
