s6-Add Remove Button Functionality

--- a/src/app/shoppinglist/shopping-list-detail/shopping-list-detail.component.html
+++ b/src/app/shoppinglist/shopping-list-detail/shopping-list-detail.component.html
@@ -16,7 +16,7 @@
               <tr *ngFor="let entry of shoppingList.entries">
                 <th>{{entry.product.name}}</th>
                 <th>{{entry.quantity}}</th>
-                <th><button>remove</button></th>
+                <th><button (click)="removeEntry(entry.id)">remove</button></th>
               </tr>
             </table>
           </fieldset>
