Adding a link to create a recipe in the menu bar

--- a/src/app/menu-bar/menu-bar.component.html
+++ b/src/app/menu-bar/menu-bar.component.html
@@ -7,6 +7,7 @@
   <div class="navigation-bar">
     <button class="navigation-button" routerLink="">home</button>
     <button class="navigation-button" routerLink="create-shoppinglist">myShopprLists</button>
+    <button class="navigation-button" routerLink="create-recipe">Recipes</button>
   </div>
   <div class="welcome-message">
     You are logged in as:
