--- a/src/app/recipe/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipe/recipe-detail/recipe-detail.component.html
@@ -1,3 +1,9 @@
-<h4>{{ recipe.name }}</h4>
-<h4>{{ recipe.description }}</h4>
-<h4>{{ recipe.amountOfServings }}</h4>
+<h1>{{ recipe.name }}</h1>
+<h3>Instructions</h3>
+<div class="recipe-description">
+  {{ recipe.description }}
+</div>
+<div class="recipe-servings">
+  <h3>Servings</h3>
+  {{ recipe.amountOfServings }}
+</div>
