--- a/src/app/menu-bar/menu-bar.component.html
+++ b/src/app/menu-bar/menu-bar.component.html
@@ -6,8 +6,8 @@
 
   <div class="navigation-bar">
     <button class="navigation-button" routerLink="">home</button>
-    <button class="navigation-button" routerLink="overview">myShopprLists</button>
-    <button class="navigation-button" routerLink="create-recipe">Recipes</button>
+    <button class="navigation-button" routerLink="shoppinglist-overview">myShopprLists</button>
+    <button class="navigation-button" routerLink="recipe-overview">Recipes</button>
   </div>
   <div class="welcome-message">
     You are logged in as:
