--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -4,17 +4,19 @@
   height: 4vw;
   background: white;
   padding-bottom: 1vw;
-  border-bottom: 5px ridge #d22571;
+  border-bottom: 5px ridge var(--primary-color);
 }
 
 .content-container {
-  height: 58vw;
+  height: auto;
+  margin-bottom: 50vw;
 }
 
 .footer-bar-container {
   position: sticky;
+  margin-top: 2vw;
   bottom: 0;
   background: white;
   border-top: 0.5px solid gray;
-  height: 3vw;
+  height: 5vw;
 }
