--- a/src/app/shoppinglist/create-shoppinglist/create-shoppinglist.component.html
+++ b/src/app/shoppinglist/create-shoppinglist/create-shoppinglist.component.html
@@ -7,9 +7,10 @@
     <form (ngSubmit)="save()" class="input-field-container">
       <h4> Please provide a name for your shopping list: </h4>
       <label>
-        <input class="" name="shoppingListName" id="shoppingListName" size="50"
+        <input class="input-field" name="shoppingListName" id="shoppingListName" size="50"
                [(ngModel)]="shoppingListName"
-               placeholder="Super awesome shopping list name ..."/>
+               placeholder="Super awesome shopping list name ..."
+        />
       </label>
       <button class="create-button" type="submit">CONFIRM</button>
     </form>
