--- a/src/app/shoppinglist/create-shoppinglist/create-shoppinglist.component.scss
+++ b/src/app/shoppinglist/create-shoppinglist/create-shoppinglist.component.scss
@@ -38,7 +38,7 @@
 }
 
 .create-button:hover {
-  background-color: #d22571;
+  background-color: var(--primary-color);
   color: white;
   border: none;
 }
