--- a/src/app/shoppinglist/shopping-list-detail/shopping-list-detail.component.html
+++ b/src/app/shoppinglist/shopping-list-detail/shopping-list-detail.component.html
@@ -1,7 +1,7 @@
 <div *ngIf="shoppingList && displayAddProduct">
   <div class="create-shoppinglist-container">
     <div class="page-title logo">
-      Details for shopping list: <span style="color:#d22571;">{{shoppingList.name}}</span>
+      Details for shopping list: <span style="color:var(--primary-color);">{{shoppingList.name}}</span>
     </div>
     <div class="create-shoppinglist-form-container">
       <div class="products-title"> Products in shopping list: {{shoppingList.entries.length}}
