--- a/src/app/shoppinglist/shopping-list-detail/shopping-list-detail.component.scss
+++ b/src/app/shoppinglist/shopping-list-detail/shopping-list-detail.component.scss
@@ -30,7 +30,7 @@
 }
 
 .create-button:hover {
-  background-color: #d22571;
+  background-color: var(--primary-color);
   color: white;
   border: none;
 }
