--- a/src/app/shoppinglist/shopping-list-overview/shopping-list-overview.component.html
+++ b/src/app/shoppinglist/shopping-list-overview/shopping-list-overview.component.html
@@ -1,19 +1,19 @@
 <div *ngIf="shoppingLists">
   <div class="overview-shoppinglist-container">
-    <div class="page-title logo">
-      Shopping lists of :<span style="color:#d22571;">{{getUser()}}</span>
-    </div>
     <div class="overview-shoppinglist">
-      <table>
-        <tr>
-          <th class="desc">NAME</th>
-          <th class="desc"><button routerLink="/create-shoppinglist">add</button></th>
-        </tr>
-        <tr *ngFor="let shoppingList of shoppingLists">
-          <th>{{shoppingList.name}}</th>
-          <th><button routerLink="/shopping-list-detail/{{shoppingList.id}}">view</button></th>
-        </tr>
-      </table>
+      <div class="row">
+        <div class="title">My shopping lists</div>
+      </div>
+      <div *ngFor="let shoppingList of shoppingLists" class="shoppinglist-row row">
+        <div class="shoppinglist-name table-element">{{shoppingList.name}}</div>
+        <div class="shoppinglist-view">
+          <button routerLink="/shopping-list-detail/{{shoppingList.id}}">view</button>
+        </div>
+      </div>
+      <div class="add-button-row row">
+        <button routerLink="/create-shoppinglist">+</button>
+      </div>
+
     </div>
   </div>
 </div>
