--- a/src/app/shoppinglist/shopping-list-overview/shopping-list-overview.component.scss
+++ b/src/app/shoppinglist/shopping-list-overview/shopping-list-overview.component.scss
@@ -1,19 +1,92 @@
-fieldset{
-  border-color: transparent;
+.overview-shoppinglist-container {
+  color: var(--primary-font);
+  font-size: 16px;
 }
-table, th, td {
-  border: 1px solid black;
-  border-collapse: collapse;
+
+
+.overview-shoppinglist {
+  margin-top: 7.5vw;
+  width: 75vw;
+  margin-left: auto;
+  margin-right: auto;
+
+  .title {
+    width: 100%;
+    background: var(--primary-color);
+    color: white;
+    font-weight: bold;
+    font-size: 1.5vw;
+    text-align: center;
+    padding: 1vw 0;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+
+  }
+
+  .row {
+    display: flex;
+    justify-content: space-between;
+    height: 5vw;
+    align-items: center;
+
+
+  }
+
+  .shoppinglist-row {
+
+    margin-top: 0.5vw;
+
+    .shoppinglist-name {
+      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+      margin-right: 1vw;
+      padding-left: 1.5vw;
+    }
+
+    .table-element {
+      display: flex;
+      align-items: center;
+      height: 100%;
+      width: 100%;
+    }
+
+    .table-element:hover {
+      background: var(--table-backgrond);
+      color: white;
+    }
+
+    .shoppinglist-view {
+      display: flex;
+      justify-items: center;
+      max-width: 7vw;
+    }
+
+    button:hover {
+      background-color: var(--secondary-color);
+      color: white;
+      border: none;
+    }
+  }
+
 }
-th, td {
-  padding: 15px;
+
+.add-button-row {
+  button, button:hover {
+    font-size: 2vw;
+    font-weight: bold;
+  }
 }
-th {
-  text-align: left;
+
+button {
+  color: var(--primary-color);
+  font-size: 1.25vw;
+  width: auto;
+  border: 0.25px solid var(--primary-color);
+  margin: auto;
+  min-width: 5vw;
+  padding: 0;
 }
-table {
-  border-spacing: 5px;
-}
-[class*=desc]{
-  background-color: cyan;
+
+button:hover {
+  background-color: var(--primary-color);
+  color: white;
+  border: none;
 }
