--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,13 +1,4 @@
-/* You can add global styles to this file, and also import other style files */
-/* Copy paste this into angular's global styles.(s)css file.*/
 
-body {
-  background-repeat: repeat;
-}
-
-h1::first-letter  {
-  color: #d22571;
-}
 
 p {
   line-height: 180%;
@@ -17,81 +8,8 @@ p {
 hr {
   alignment: center;
   width: 0;
-  //border-top: 5px solid #d22571;
 }
 
-main {
-  padding: 1rem;
-}
-
-aside {
-  padding: 1.6rem 1rem 1rem 1rem;
-}
-
-html, body {
-  height: 100%;
-  margin: 0;
-}
-.content {
-  min-height: 100%;
-}
-.content-inside {
-  padding-bottom: 90px;
-}
-#page-footer {
-  height: 90px;
-  margin-top: -90px;
-  background-color: #f8f9fa;
-  box-shadow: 0 -0.5rem 1rem rgba(0, 0, 0, 0.15);
-}
-
-#page-main-content, #page-sidebar {
-  margin: 2rem;
-}
-
-.footer-content {
-  padding: 20px;
-  text-align: center;
-}
-.navbar-shoppr-brand {
-  color: #d22571;
-}
-
-.navbar {
-  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
-}
-
-.sidebar-element {
-  margin: 0 0 2rem 0;
-}
-
-.content-box, .sidebar-box {
-  margin: 1rem 0 1rem 0;
-  padding: 2rem;
-  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
-}
-
-.content-box {
-  border-top: #d22571 solid thick;
-  background-color: rgba(255, 255, 255, 0.5);
-}
-
-.sidebar-box {
-  border-top: black solid thick;
-  background-color: rgba(255, 255, 255, 0.5);
-}
-.btn-primary {
-  background-color: #d22571;
-  border-color: #d22571;
-}
-
-.btn-primary:hover {
-  background-color: #2e2e2e;
-}
-
-.btn-primary:active, .btn-primary:visited, .btn-primary:focus, .btn-primary:active:focus {
-  background-color: #2e2e2e;
-}
 
 button{
   height: 3vw;
@@ -103,13 +21,13 @@ button{
 }
 
 button:hover{
-  background-color: #d22571;
+  background-color: var(--primary-color);
   color: white;
   border: none;
 }
 
 button:active, button:visited, button:focus, button:active:focus{
-  background-color: #d22571;
+  background-color: var(--primary-color);
   color: white;
   border: none;
 }
@@ -129,4 +47,13 @@ body {
   margin-left: 2vw;
   color: red;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+}
+
+:root {
+  --primary-color: #004BA8;
+  --secondary-color: lightgrey;
+  --primary-accent-color: #d22571;
+  --backgroud-color: white;
+  --primary-font: #140F2D;
+  --table-backgrond: #004ba824;
 }
