Styled shoppinglist detail and add product function

--- a/src/app/authentication/logon/logon.component.html
+++ b/src/app/authentication/logon/logon.component.html
@@ -4,7 +4,7 @@
     <h4>Email : </h4>
     <div>
       <label>
-        <input id="emailLogon" formControlName="email" (click)="resetErrors()" (input)="validateEmailFormat()" size=40px placeholder="aaa@bbb.ccc"/>
+        <input class="input-field" id="emailLogon" formControlName="email" (click)="resetErrors()" (input)="validateEmailFormat()" size=40px placeholder="aaa@bbb.ccc"/>
       </label>
     </div>
     <div class="text-danger">
