--- a/src/app/menu-bar/menu-bar.component.html
+++ b/src/app/menu-bar/menu-bar.component.html
@@ -9,15 +9,15 @@
     <div class="dropdown">
       <button class="navigation-button" routerLink="overview">Shoppinglists</button>
       <div class="dropdown-content">
-        <a routerLink="overview">My shopping lists</a>
-        <a routerLink="create-shoppinglist">Create shoppinglist</a>
+        <span class="link"  routerLink="overview">My shopping lists</span>
+        <span class="link"  routerLink="create-shoppinglist">Create shoppinglist</span>
       </div>
     </div>
     <div class="dropdown">
       <button class="navigation-button" routerLink="recipe-overview">Recipes</button>
       <div class="dropdown-content">
-        <a routerLink="recipes-overview">Find recipes</a>
-        <a routerLink="create-recipe">Create recipe</a>
+        <span class="link" routerLink="recipes-overview">Find recipes</span>
+          <span class="link"  routerLink="create-recipe">Create recipe</span>
       </div>
     </div>
   </div>
