--- a/src/app/shoppinglist/create-shoppinglist/create-shoppinglist.component.html
+++ b/src/app/shoppinglist/create-shoppinglist/create-shoppinglist.component.html
@@ -4,7 +4,7 @@
   </div>
 
   <div class="create-shoppinglist-form-container">
-    <form (ngSubmit)="save()" class="input-field-container">
+    <form (ngSubmit)="save()">
       <h4> Please provide a name for your shopping list: </h4>
       <label>
         <input class="input-field" name="shoppingListName" id="shoppingListName" size="50"
