--- a/src/app/shoppinglist/shopping-list-detail/shopping-list-detail.component.html
+++ b/src/app/shoppinglist/shopping-list-detail/shopping-list-detail.component.html
@@ -1,33 +1,31 @@
-<div *ngIf="shoppingList && displayAddProduct">
-  <div class="create-shoppinglist-container">
-    <div class="page-title logo">
+
+  <div *ngIf="shoppingList">
+    <div class="page-title">
       Details for shopping list: <span style="color:var(--primary-color);">{{shoppingList.name}}</span>
     </div>
-    <div class="create-shoppinglist-form-container">
-      <div class="products-title"> Products in shopping list: {{shoppingList.entries.length}}
-        <div class="product-list">
-          <fieldset>
-            <table style="width:100%">
-              <tr>
-                <th class="desc">NAME</th>
-                <th class="desc">QUANTITY</th>
-                <th class="desc"></th>
-              </tr>
-              <tr *ngFor="let entry of shoppingList.entries">
-                <th>{{entry.product.name}}</th>
-                <th>{{entry.quantity}}</th>
-                <th><button (click)="removeEntry(entry.id)">remove</button></th>
-              </tr>
-            </table>
-          </fieldset>
-          <fieldset>
-            <hr>
-            <button (click)="showAddProduct()">add product</button>
-            <app-add-product [ngStyle]="{'display':displayAddProduct}"></app-add-product>
-          </fieldset>
-        </div>
-      </div>
-    </div>
-  </div>
+          <div class="shoppinglist-detail-container">
+            <div class="shoppinglist-detail">
+              <div class="row">
+                <div class="table-title"> Products in shopping list: {{shoppingList.entries.length}}</div>
+              </div>
+              <div class="table-legend row">
+                <div class="table-element">Name</div>
+                <div class="table-element">Qty</div>
+                <div class="table-element">Actions</div>
+              </div>
+              <div *ngFor="let entry of shoppingList.entries" class="table-row row">
+                <div class="product-name table-element">{{entry.product.name}}</div>
+                <div class="product-name table-element">{{entry.quantity}}</div>
+                <div class="table-button">
+                  <button (click)="removeEntry(entry.id)">remove</button>
+                </div>
+              </div>
+              <div class="add-button-row row">
+                <button (click)="showAddProduct()">add product</button>
+              </div>
+            </div>
+
+          </div>
+          <app-add-product [ngStyle]="{'display':displayAddProduct}"></app-add-product>
 </div>
 
