--- a/src/app/authentication/authentication.component.html
+++ b/src/app/authentication/authentication.component.html
@@ -1,5 +1,4 @@
-<h2>Logon</h2>
-<fieldset>
+<div class="page-title">Logon</div>
   <div class="logon-container">
     <div class="item">
       <app-logon></app-logon>
@@ -9,4 +8,3 @@
       <app-create-account></app-create-account>
     </div>
   </div>
-</fieldset>
