--- a/src/app/authentication/authentication.component.scss
+++ b/src/app/authentication/authentication.component.scss
@@ -2,11 +2,12 @@
   display: flex;
   height: 18vw;
   align-items: center;
+  margin-top: 2vw;
 }
 .item{
   margin-left: auto;
   margin-right: auto;
-  width:auto;
+  width:30vw;
 }
 
 .separation {
@@ -19,3 +20,5 @@
 h2{
   margin-bottom: 0;
 }
+
+
