--- a/src/app/menu-bar/menu-bar.component.scss
+++ b/src/app/menu-bar/menu-bar.component.scss
@@ -45,7 +45,7 @@
 }
 
 /* Links inside the dropdown */
-.dropdown-content a {
+.dropdown-content .link {
   color: black;
   padding: 12px 16px;
   text-decoration: none;
@@ -53,7 +53,7 @@
 }
 
 /* Change color of dropdown links on hover */
-.dropdown-content a:hover {
+.dropdown-content .link:hover {
   background-color: var(--primary-color);
   color: white;
 }
