--- a/src/app/shoppinglist/shopping-list-overview/shopping-list-overview.component.html
+++ b/src/app/shoppinglist/shopping-list-overview/shopping-list-overview.component.html
@@ -2,11 +2,11 @@
   <div class="overview-shoppinglist-container">
     <div class="overview-shoppinglist">
       <div class="row">
-        <div class="title">My shopping lists</div>
+        <div class="table-title">My shopping lists</div>
       </div>
-      <div *ngFor="let shoppingList of shoppingLists" class="shoppinglist-row row">
+      <div *ngFor="let shoppingList of shoppingLists" class="table-row row">
         <div class="shoppinglist-name table-element">{{shoppingList.name}}</div>
-        <div class="shoppinglist-view">
+        <div class="table-button">
           <button routerLink="/shopping-list-detail/{{shoppingList.id}}">view</button>
         </div>
       </div>
