--- a/src/app/menu-bar/menu-bar.component.html
+++ b/src/app/menu-bar/menu-bar.component.html
@@ -1,6 +1,6 @@
 <div class="menu-container">
   <div>
-    <span class="logo">sh<span style="color:var(--primary-accent-color);">o</span>ppr
+    <span routerLink="" class="logo" style="user-select: none;">sh<span style="color:var(--primary-accent-color);">o</span>ppr
     </span>
   </div>
 
