--- a/src/app/footer-bar/footer-bar.component.scss
+++ b/src/app/footer-bar/footer-bar.component.scss
@@ -1,9 +1,12 @@
 
 .footer-container {
   display: flex;
+  border-top: 0.5px solid gray;
+  color: white;
 }
 
-.welcome-message {
+.copyright {
+  padding-right: 1vw;
   margin-left: auto;
   align-self: flex-end;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
