--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,5 @@
 body {
+  margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 }
 
@@ -44,11 +45,6 @@ button:active, button:visited, button:focus, button:active:focus{
   font-weight: bold;
 }
 
-body {
-  margin-left: 1vw;
-  margin-right: 1vw;
-}
-
 .error-message {
   margin-left: 2vw;
   color: red;
@@ -71,6 +67,7 @@ body {
   font-size: 1.5vw;
   text-align: center;
   padding: 1vw 0;
+  border-radius: 5px;
 }
 
 .table-legend {
@@ -93,6 +90,7 @@ body {
     height: 100%;
     width: 100%;
     padding-left: 1.5vw;
+    margin-right: 1vw;
   }
 
   .table-element:hover {
@@ -119,4 +117,8 @@ body {
   padding-left: 1%;
   font-size: 1.25vw;
   display: inline;
+}
+
+.text-accent {
+  color:var(--primary-accent-color);
 }
